@@ -1,0 +1,7 @@
+public class jmisc
+{
+  public static void main (String[] args)
+  {
+    return;
+  }
+}
