@@ -1,3 +1,14 @@
+Sun Jul 23 21:02:42 2000  Anthony Green  <green@redhat.com>
+
+	* configure: Rebuilt.
+	* configure.in (configdirs): Add gdb.java.
+	* gdb.java/jmisc.java: New file.
+	* gdb.java/jmisc.exp: New file.
+	* gdb.java/Makefile.in: New file.
+	* gdb.java/configure: Rebuilt.
+	* gdb.java/configure.in: New file.
+	* lib/java.exp: New file.
+
 Wed Jul 12 18:14:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* gdb.base/exprs.exp: Test casts to a pointer including over and
